@@ -1,49 +1,0 @@
-<?php
-
-
-// just like with the way zip files should work, return the list of files that are in a playlist by parsing through their path
-//  maybe use aliases to parse any path leading to the same place?
-$no_setup = true;
-require_once dirname(__FILE__) . DIRECTORY_SEPARATOR . '..' . DIRECTORY_SEPARATOR . 'include' . DIRECTORY_SEPARATOR . 'common.php';
-
-require_once LOCAL_ROOT . 'modules' . DIRECTORY_SEPARATOR . 'fs_file.php';
-
-// music handler
-class fs_playlist extends fs_file
-{
-	const NAME = 'Playlists on Filesystem';
-
-	static function handles($file)
-	{
-				
-		// get file extension
-		$ext = getExt($file);
-		
-		switch($ext)
-		{
-			case 'wpl':
-				return true;
-			default:
-				return false;
-		}
-		
-		return false;
-
-	}
-
-	static function handle($database, $file)
-	{
-	}
-	
-	static function get($database, $props)
-	{
-		return array();
-	}
-
-
-	static function cleanup($database, $watched)
-	{
-	}
-}
-
-?>
