@@ -1,0 +1,7 @@
+<?php
+
+// this is just a wrapper plugin for moving around request variables
+//  this is handy when a client service already uses certain variables but the db_file module recognizes something else
+//  this is so the clients can remain simple, and the server can handle some of the complexities
+
+?>
